fix scrollbar animation bug

--- a/src/styles/components/scrollbar.less
+++ b/src/styles/components/scrollbar.less
@@ -9,7 +9,6 @@
     .@{ns}scrollbar-area {
         min-width: 100%;
         min-height: 100%;
-        transition: all 0.2s ease-in;
     }
 
     .@{ns}scrollbar-show {
@@ -23,7 +22,6 @@
         right: 0px;
         height: 4px;
         opacity: 0;
-        transition: all 0.2s ease-in;
 
         .@{ns}scrollbar-horizontal-track {
             position: absolute;
@@ -49,7 +47,6 @@
         width: 4px;
         right: 0px;
         opacity: 0;
-        transition: all 0.2s ease-in;
 
         .@{ns}scrollbar-vertical-track {
             position: absolute;
@@ -61,7 +58,7 @@
             cursor: pointer;
             background-color: rgba(0, 0, 0, 0.2);
             transition: background 0.2s ease-in;
-            
+
             &:hover {
                 background-color: rgba(0, 0, 0, 0.4);
             }
